--- a/Portfolio/SpinTheMoose.html
+++ b/Portfolio/SpinTheMoose.html
@@ -13,7 +13,7 @@
 <body>
 <!--This is the header for the site-->
 <header class="sticky" id="header">
-  <div>
+  <div class="navigation">
     <ul>
       <!--These are the navigation links-->
       <li><a href="index.html" id="aboutlink" class="about">Home</a></li>
@@ -62,8 +62,8 @@
         website to help it fit in with the rest of the site.</p>
         <!--These are the prototype images-->
         <div class="mooseprototype">
-          <img class="prototype" src="images/mooselow.png" alt="Low-fidelity prototype" style="max-width:390px;margin-top:30px"></img>
-          <img class="prototype" src="images/moosehigh.png" alt="High-fidelity prototype" style="max-width:390px;margin-top:40px;"></img>
+          <img class="prototype" src="images/mooselow.png" alt="Low-fidelity prototype" style="max-width:356px;margin-top:30px"></img>
+          <img class="prototype" src="images/moosehigh.png" alt="High-fidelity prototype" style="max-width:356px;margin-top:40px;"></img>
         </div>
     </div>
 
