--- a/Portfolio/Framework.html
+++ b/Portfolio/Framework.html
@@ -13,7 +13,7 @@
 <body>
 <!--This is the header for the site-->
 <header class="sticky" id="header">
-  <div>
+  <div class="navigation">
     <ul>
       <!--These are the navigation links-->
       <li><a href="index.html" id="aboutlink" class="about">Home</a></li>
