--- a/Portfolio/Rubyside.html
+++ b/Portfolio/Rubyside.html
@@ -13,7 +13,7 @@
 <body>
 <!--This is the header for the site-->
 <header class="sticky" id="header">
-  <div>
+  <div class="navigation">
     <ul>
       <!--These are the navigation links-->
       <li><a href="index.html" id="aboutlink" class="about">Home</a></li>
@@ -119,7 +119,7 @@
       <img src="images/Twitter3.svg" class="twitter"></img>
     </a>
   </div>
-  
+
   <!--This is the copyright-->
   <div class="copyright">
     <p>&copy;Samantha Crosby 2018</p>
