--- a/SpinTheMoose/SpinTheMoose.html
+++ b/SpinTheMoose/SpinTheMoose.html
@@ -19,12 +19,12 @@
         <h1>Summer Camp Canada</h1>
         <!-- <div class="right"> -->
       </div>
-      <div class="right">
+      <!-- <div class="right"> -->
       <div class="cell small-6">
         <!--This is the phone number for smaller earth.-->
         <h2>Call Now on 0151 7026808</h2>
       </div>
-    </div>
+    <!-- </div> -->
   </div>
   <!--This is the button the user presses to produce the pop-up form-->
   <div class="button">
